# Power-performance-comparison-between-JS-and-C-engines

./: CITATION.cff  CMakeLists.txt  LICENSE  Main.cpp  OpenGLEngine  README.md  README.txt  a.out  glad.c  hello_triangle.cpp  perf_automation.sh  perf_parser.py  readme.md  server.py  statistical_analysis.R
Assets/gltf/: Animation testing.gltf  Scenario1.gltf  Scenario2.gltf
CPP_engine/: README.md  glad.c  hello_triangle.cpp
CPP_engine/Assets/gltf/: Scenario1.gltf  Scenario3.gltf
CPP_engine/Engine/: Engine.cpp  Mesh.cpp  Mesh.h  Object3D.cpp  PBRMetallicRoughness.h  SceneGraph.cpp
CPP_engine/Engine/Animation/: Animator.h  Sampler.cpp
CPP_engine/GL_Helpers/: AssetLoader.h  Shader.cpp  Shader.h
CPP_engine/Math/: Matrix4.h  Vector2.cpp  Vector2.h  Vector3.h  Vector4.h  glMath.cpp  glMath.h
CPP_engine/Shader_sources/: PBR_FS.glsl  PBR_VS.glsl  default_FS.glsl  default_VS.glsl
Engine/: Camera.cpp  Camera.h  EmptyObject.cpp  EmptyObject.h  Engine.cpp  Engine.h  Mesh.cpp  Mesh.h  Object3D.cpp  Object3D.h  PBRMetallicRoughness.cpp  PBRMetallicRoughness.h  PointLight.cpp  PointLight.h  SceneGraph.cpp  SceneGraph.h  Transform.cpp  Transform.h
Engine/Animation/: Animator.cpp  Channel.cpp  Channel.h  Sampler.cpp  Sampler.h
GL_Helpers/: AssetLoader.cpp  AssetLoader.h  Shader.cpp  Shader.h
JS_engine/: README.md  server.py
JS_engine/Assets/gltf/: AnimationTesting.gltf
JS_engine/src/Engine/: Animator.js  FirstPersonController.js  Main.js  Mesh.js
JS_engine/src/Math/: Matrix4.js  Vector3.js
JS_engine/src/a_landing/: LandingPage.html
Math/: Matrix4.cpp  Matrix4.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  glMath.cpp  glMath.h
Shader_sources/: PBR_FS.glsl  PBR_VS.glsl  default_FS.glsl  default_VS.glsl
config/: config.h
experiment_results/: parsed_data.csv
src/Engine/: Camera.js  EmptyObject.js  Engine.js  Main.js  Object3D.js  SceneGraph.js
src/Math/: Vector2.js  Vector4.js
src/a_landing/: LandingPage.html
